force-app/main/default/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>hud_ADID__c</fullName>
        <label>hud_ADID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_BIRTH_DT__c</fullName>
        <label>hud_BIRTH_DT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>hud_DECEASED_FLAG__c</fullName>
        <label>hud_DECEASED_FLAG</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_EFFDT__c</fullName>
        <label>hud_EFFDT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>hud_EFF_STATUS__c</fullName>
        <label>hud_EFF_STATUS</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_EPPN__c</fullName>
        <externalId>true</externalId>
        <label>hud_EPPN</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_ETHNICITY_CD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>hud_ETHNICITY_CD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hud_GENDER__c</fullName>
        <label>hud_GENDER</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_INTERNAL_ID__c</fullName>
        <externalId>true</externalId>
        <label>hud_INTERNAL_ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_MULE_UNIQUE_PERSON_KEY__c</fullName>
        <externalId>true</externalId>
        <label>hud_MULE_UNIQUE_PERSON_KEY</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_NAME_TYPE__c</fullName>
        <label>hud_NAME_TYPE</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_PEG_EFFDT__c</fullName>
        <label>hud_PEG_EFFDT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>hud_PEG_EFF_STATUS__c</fullName>
        <label>hud_PEG_EFF_STATUS</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_PEG_EPE_STATUS_CD__c</fullName>
        <label>hud_PEG_EPE_STATUS_CD</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_PEG_LONGER_SERVICE_STATUS__c</fullName>
        <label>hud_PEG_LONGER_SERVICE_STATUS</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_PEG_RETIREE_ELIG_FLAG__c</fullName>
        <label>hud_PEG_RETIREE_ELIG_FLAG</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_PEG_UPDATE_DT__c</fullName>
        <label>hud_PEG_UPDATE_DT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>hud_PERSON_EFFDT__c</fullName>
        <label>hud_PERSON_EFFDT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>hud_PERSON_EFF_STATUS__c</fullName>
        <label>hud_PERSON_EFF_STATUS</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_PERSON_KEY__c</fullName>
        <externalId>true</externalId>
        <label>hud_PERSON_KEY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hud_PERSON_PRIVACY_VALUE__c</fullName>
        <label>hud_PERSON_PRIVACY_VALUE</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hud_PERSON_UPD_DT__c</fullName>
        <label>hud_PERSON_UPD_DT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>hud_PNG_STATUS__c</fullName>
        <label>hud_PNG_STATUS</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_PRIVACY_FERPA_EFFDT__c</fullName>
        <label>hud_PRIVACY_FERPA_EFFDT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>hud_PRIVACY_FERPA_PAST_STU__c</fullName>
        <label>hud_PRIVACY_FERPA_PAST_STU</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_PRIVACY_FERPA_STATUS__c</fullName>
        <label>hud_PRIVACY_FERPA_STATUS</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_PRIVACY_FERPA_UPDATE_DT__c</fullName>
        <label>hud_PRIVACY_FERPA_UPDATE_DT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>hud_PRIVACY_VALUE__c</fullName>
        <label>hud_PRIVACY_VALUE</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_PSG_EFFDT__c</fullName>
        <label>hud_PSG_EFFDT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>hud_PSG_EFF_STATUS__c</fullName>
        <label>hud_PSG_EFF_STATUS</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_PSG_STU_SPEC_STAT__c</fullName>
        <label>hud_PSG_STU_SPEC_STAT</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_PSG_UPDATE_DT__c</fullName>
        <label>hud_PSG_UPDATE_DT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>hud_UNIV_ID__c</fullName>
        <externalId>true</externalId>
        <label>University ID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_UUID__c</fullName>
        <externalId>true</externalId>
        <label>hud_UUID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
</CustomObject>